@@ -18,6 +18,7 @@ import io.github.danthe1st.danbot1.commands.Command;
 import io.github.danthe1st.danbot1.console.Console;
 import io.github.danthe1st.danbot1.listeners.BotListener;
 import io.github.danthe1st.danbot1.util.BotSecurityManager;
+import io.github.danthe1st.danbot1.util.LanguageController;
 import io.github.danthe1st.danbot1.util.STATIC;
 import io.github.danthe1st.danbot1.util.ScanCloser;
 import net.dv8tion.jda.api.AccountType;
@@ -42,14 +43,12 @@ public class Main {
 	private static String adminId="358291050957111296";
 	private static String[] args;
 	private static JDA jda=null;
+	private static final String ANNOTATED_WITH=" is annotated with @";
 	static {
 		Runtime.getRuntime().addShutdownHook(new Thread(new ScanCloser(scan)));
-		Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
-			@Override
-			public void run() {
-				if (jda!=null) {
-					jda.shutdown();
-				}
+		Runtime.getRuntime().addShutdownHook(new Thread(()-> {
+			if (jda!=null) {
+				jda.shutdown();
 			}
 		}));
 	}
@@ -121,12 +120,9 @@ public class Main {
 					}
 					else if (arg.toLowerCase().startsWith("admin=")) {
 						String newAdminId=getStringArgValue(arg, null);
-						try {
-							if (!(newAdminId==null||newAdminId.equals(""))) {
-								Long.parseLong(adminId);
-								adminId=newAdminId;
-							}
-						} catch (Exception e) {
+						if (!(newAdminId==null||newAdminId.equals(""))) {
+							Long.parseLong(adminId);
+							adminId=newAdminId;
 						}
 					}
 					else if (arg.toLowerCase().startsWith("status=")) {
@@ -137,7 +133,8 @@ public class Main {
 					}
 					
 				}
-			} catch (IndexOutOfBoundsException e) {
+			} catch (Exception e) {
+				System.err.println("cannot parse/use argument: "+arg);
 			}
 		}
 		System.out.println("DanBot1 by Daniel Schmid");
@@ -160,15 +157,15 @@ public class Main {
 			
 			ConfigurationBuilder configurationBuilder = new ConfigurationBuilder();
 			
-		    configurationBuilder.addUrls(ClasspathHelper.forPackage("io.github.danthe1st.danbot1"));
+		    configurationBuilder.addUrls(ClasspathHelper.forJavaClassPath());
 		    loadPlugins(configurationBuilder);
 		   
 		    Reflections ref = new Reflections(configurationBuilder);
 		    addCommandsAndListeners(ref,builder);
 			try {
 				jda=builder.build();
-				jda.awaitReady();
 				Console.runConsole(scan, jda);
+				jda.awaitReady();
 				((JDAImpl) jda).getGuildSetupController().clearCache();
 				jda.getPresence().setStatus(statusWhenLoaded);
 				jda.getPresence().setActivity(Activity.playing(gameWhenLoaded));
@@ -182,6 +179,7 @@ public class Main {
 				continue;
 			} catch (final InterruptedException e) {
 				e.printStackTrace();
+				Thread.currentThread().interrupt();
 			}
 			break;
 		}
@@ -191,7 +189,7 @@ public class Main {
 		try {
 			status = OnlineStatus.valueOf(statusStr.toUpperCase());
 		} catch (Exception e) {
-			
+			//ignore
 		}
 		if (status==null||status==OnlineStatus.UNKNOWN) {
 			status=OnlineStatus.fromKey(statusStr.toUpperCase());
@@ -204,8 +202,9 @@ public class Main {
 	private static String getStringArgValue(String argStr,String defaultArg) {
 		String newArg=null;
 		try {
-			newArg = argStr.substring(argStr.indexOf("=")+1);
-		} catch (Exception e) {
+			newArg = argStr.substring(argStr.indexOf('=')+1);
+		} catch (IndexOutOfBoundsException e) {
+			//ignore->see next if
 		}
 		if (newArg==null) {
 			newArg=defaultArg;
@@ -221,7 +220,7 @@ public class Main {
 		addAction(ref, BotCommand.class,(cmdAsAnnotation,annotatedAsObject)->{
     		BotCommand cmdAsBotCommand=(BotCommand)cmdAsAnnotation;
     		Command cmd=(Command)annotatedAsObject;
-    		for (String alias : cmdAsBotCommand.aliases()) {
+    		for (String alias : cmdAsBotCommand.value()) {
 				CommandHandler.addCommand(alias.toLowerCase(), cmd);
 			}
     	});
@@ -240,15 +239,15 @@ public class Main {
 	private static void addAction(Reflections ref,Class<? extends Annotation> annotClass, BiConsumer<Annotation, Object> function) {
 		for (Class<?> cl : ref.getTypesAnnotatedWith(annotClass,true)) {
             try {
-				Object annotatedAsObject=cl.newInstance();
+				Object annotatedAsObject=cl.getDeclaredConstructor().newInstance();
 				Annotation cmdAsAnnotation = cl.getAnnotation(annotClass);
 				function.accept(cmdAsAnnotation, annotatedAsObject);
 			} catch (InstantiationException e) {
-				System.err.println(cl.getName()+" is annotated with @"+annotClass.getName()+" but cannot be instanciated");
+				System.err.println(cl.getName()+ANNOTATED_WITH+annotClass.getName()+" but cannot be instanciated");
 			} catch (IllegalAccessException e) {
-				System.err.println(cl.getName()+" is annotated with @"+annotClass.getName()+" but the no-args constructor is not visible");
-			} catch (Throwable e) {
-				System.err.println(cl.getName()+" is annotated with @"+annotClass.getName()+" but there was an unknown Error: "+e.getClass().getName()+": "+e.getCause());
+				System.err.println(cl.getName()+ANNOTATED_WITH+annotClass.getName()+" but the no-args constructor is not visible");
+			} catch (Exception e) {
+				System.err.println(cl.getName()+ANNOTATED_WITH+annotClass.getName()+" but there was an unknown Error: "+e.getClass().getName()+": "+e.getCause());
 			}
         }
     }
@@ -279,7 +278,9 @@ public class Main {
 					urlArr[i]=urls.get(i);
 				}
 				builder.addUrls(urls);
-				builder.addClassLoader(new URLClassLoader(urlArr));
+				URLClassLoader loader=new URLClassLoader(urlArr);
+				builder.addClassLoader(loader);
+				LanguageController.setPluginLoader(loader);
 			}
 		}else {
 			if(!pluginFolder.mkdir()) {
